--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
 <body>
     <div class="container">
         <h1>Random Message Generator</h1>
+
+        <!-- Category selector -->
+        <select id="category-select">
+            <option value="motivational">Motivational</option>
+            <option value="funny">Funny</option>
+            <option value="inspirational">Inspirational</option>
+        </select>
+
         <div id="message-box">
             <!-- The random message will be displayed here -->
         </div>
+        
         <button id="generate-btn">Generate Message</button>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
