Added Social Media Sharing

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         </div>
         
         <button id="generate-btn">Generate Message</button>
+        <!-- Social media share buttons -->
+        <button id="share-twitter">Share on Twitter</button>
+
     </div>
 
     <script src="script.js"></script>
